Add remaining functionality to dashboard, add area to sightings and update home page.